--- a/index.html
+++ b/index.html
@@ -5,25 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAEA DESIGN</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-    <!-- 헤더 -->
-    <header>
-        <div class="logo">
-            <h1>SAEA DESIGN</h1>
-        </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="#" class="active" data-category="all">ALL</a></li>
-                <li><a href="#" data-category="ai-visual">AI & VISUAL</a></li>
-                <li><a href="#" data-category="promo">PROMO & DETAIL PAGE</a></li>
-                <li><a href="#" data-category="etc">ETC</a></li>
-                <li><a href="#" data-category="customer">CUSTOMER ONLY</a></li>
-            </ul>
-            <a href="#contact" class="contact-btn">contact</a>
-        </nav>
-    </header>
-
     <!-- 사이드바 메뉴 -->
     <aside class="sidebar">
         <div class="logo-sidebar">
@@ -42,115 +26,8 @@
     </aside>
 
     <!-- 메인 콘텐츠 -->
-    <main class="portfolio-grid">
-        <!-- 포트폴리오 아이템들 -->
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/FF6B6B/ffffff?text=AI+Music+Film" alt="더 모먼트 AI 뮤직 쇼트 필름">
-                <div class="overlay">
-                    <h3>더 모먼트 AI 뮤직 쇼트 필름</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/4ECDC4/ffffff?text=AI+Model" alt="씨스퀘어 명절 시즌 AI 모델">
-                <div class="overlay">
-                    <h3>씨스퀘어 뗏 명절 시즌 AI 모델 및 제품 비주얼</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/95E1D3/ffffff?text=Fashion+Editorial" alt="코트에디트 AI 모델">
-                <div class="overlay">
-                    <h3>코트에디트 AI 모델 및 패션 에디토리얼 #2</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/F38181/ffffff?text=Lifestyle" alt="무에 AI 모델">
-                <div class="overlay">
-                    <h3>무에 AI 모델 및 라이프스타일 에디토리얼</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/AA96DA/ffffff?text=Fashion" alt="코트에디트 패션 에디토리얼">
-                <div class="overlay">
-                    <h3>코트에디트 AI 모델 및 패션 에디토리얼</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/FCBAD3/ffffff?text=Eye+Serum" alt="루미네 아이세럼">
-                <div class="overlay">
-                    <h3>루미네 바운시 아이세럼 AI 모델 및 제품 비주얼</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="ai-visual">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/A8D8EA/ffffff?text=Christmas" alt="씨스퀘어 크리스마스">
-                <div class="overlay">
-                    <h3>씨스퀘어 크리스마스 시즌 AI 모델 및 제품 비주얼</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="promo">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/FFD93D/ffffff?text=Campaign" alt="씨스퀘어 캠페인">
-                <div class="overlay">
-                    <h3>씨스퀘어 시즌 캠페인 비주얼 및 스토어 프로모션 광고</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="promo">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/6BCB77/ffffff?text=Product+Poster" alt="제리샵 포스터">
-                <div class="overlay">
-                    <h3>제리샵 제품 포스터</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="promo">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/4D96FF/ffffff?text=Detail+Page" alt="타코형 에기바">
-                <div class="overlay">
-                    <h3>타코형 에기바 상세페이지</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="etc">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/FF8A5B/ffffff?text=SNS+Feed" alt="디어바스켓 SNS">
-                <div class="overlay">
-                    <h3>디어바스켓 SNS 피드</h3>
-                </div>
-            </div>
-        </div>
-
-        <div class="portfolio-item" data-category="etc">
-            <div class="image-wrapper">
-                <img src="https://via.placeholder.com/800x625/C70039/ffffff?text=Brand+Book" alt="그루핑 브랜드">
-                <div class="overlay">
-                    <h3>그루핑 브랜드 소개서</h3>
-                </div>
-            </div>
-        </div>
+    <main class="portfolio-grid" id="portfolio-container">
+        <!-- 포트폴리오 아이템들이 자동으로 로드됩니다 -->
     </main>
 
     <!-- 모달 -->
@@ -159,9 +36,21 @@
         <div class="modal-content-wrapper">
             <img class="modal-content" id="modal-image">
             <div class="modal-caption" id="modal-caption"></div>
+            <div id="modal-images" class="modal-images-grid"></div>
         </div>
     </div>
 
     <script src="script.js"></script>
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
 </body>
 </html>
